--- a/_config.yml
+++ b/_config.yml
@@ -14,35 +14,36 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: dwgth4i's blog
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Daily staring at the computer for hours 
 
-description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+description: blog, dwgth4i, windows, offensive security
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://dwgth4i.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: dwgth4i # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: dwgth4i # change to your Twitter username
 
-social:
+instagram:
+  username: dwgth4i
+
+social: 
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: dwgth4i
+  email: dwgth4i@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://twitter.com/dwgth4i
+    - https://github.com/dwgth4i
+    - https://www.instagram.com/dwgth4i
+    - https://www.linkedin.com/in/duong-thai-trinh
 
 # Site Verification Settings
 webmaster_verifications:
@@ -88,7 +89,7 @@ pageviews:
 #     light — Use the light color scheme
 #     dark — Use the dark color scheme
 #
-theme_mode: # [light | dark]
+theme_mode: dark
 
 # The CDN endpoint for media resources.
 # Notice that once it is assigned, the CDN url
@@ -98,7 +99,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: "https://avatars.githubusercontent.com/u/91010847?s=400&u=280240c6616faf41453cca2e5af2c6234cbd508e&v=4"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
