--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: dwgth4i's blog
 
 tagline: Daily staring at the computer for hours 
 
-description: blog, dwgth4i, windows, offensive security
+description: blog, dwgth4i, windows, offensive security, active directory
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
